# binary_study

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure_capstone.sh  configure_loader_demo.sh  configure_pin.sh  run_capstone.sh  run_loader_demo.sh
1/: README.md  compile.c  compile.s  compile_pre.c  out_not_strip  out_strip
11/: dataleak-test-xor.c  dta-dataleak.cpp  dta-execve.cpp  execve-test-overflow-implicit.c  execve-test-overflow.c
12/: z3_script  z3_script2  z3_script3  z3_script_foo
13/: CMakeLists.txt  backword_slicing.cc  code_coverage.cc  exploit_callsite.py  icall.c
2/: README.md
3/: README.md  out.txt  winnt.h
4/: README.md  loader_demo.cc
5/: README.md
5/lvl1/: ctf  decoded_payload  elf_header
6/: README.md  gdb.txt
7/: elf_inject  encrypted  encrypted2  heapcheck.c  heapoverflow  heapoverflow.c  hello.s  hello_ctor.s  hello_got.s  one_byte_bug  xor_encrypt.c
8/: CMakeLists.txt  capstone_disas.cc  capstone_disas.h  overlapping  overlapping.c
9/profiler/: profiler.cpp  profiler.h
9/unpacker/: packed  unpacker.cpp  unpacker.h
elfinject/: CMakeLists.txt  elfinject.c
inc/: CMakeLists.txt  loader.cc  loader.h
util/: CMakeLists.txt  disasm_util.cc  triton_util.cc  triton_util.h
